--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "antd": "^5.9.4",
     "axios": "^1.5.1",
     "dayjs": "^1.11.10",
+    "i18next": "^23.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.3.0",
     "react-icons": "^4.11.0",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0"
